<!-- activity_sign_up.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey">

    <!-- Logo -->
    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:src="@drawable/logo_w"
        android:contentDescription="@string/logo_desc" />

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@id/image_logo"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:hint="@string/first_name"
        android:background="@drawable/edit_text_background"
        android:textColorHint="@color/yellow"
        android:textColor="@color/white" />


    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@id/edit_first_name"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:hint="@string/last_name"
        android:background="@drawable/edit_text_background"
        android:textColorHint="@color/yellow"
        android:textColor="@color/white" />


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@id/edit_last_name"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:hint="@string/email"
        android:background="@drawable/edit_text_background"
        android:textColorHint="@color/yellow"
        android:textColor="@color/white"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@id/edit_email"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:hint="@string/password"
        android:background="@drawable/edit_text_background"
        android:textColorHint="@color/yellow"
        android:textColor="@color/white"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@id/edit_password"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:hint="@string/confirm_password"
        android:background="@drawable/edit_text_background"
        android:textColorHint="@color/yellow"
        android:textColor="@color/white"
        android:inputType="textPassword" />


    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_confirm_password"
        android:layout_marginTop="@dimen/radio_group_margin_top"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/yellow" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/yellow"
            android:layout_marginStart="@dimen/radio_button_margin" />
    </RadioGroup>


    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_gender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/rounded_button_background"
        android:text="@string/sign_up"
        android:textColor="@color/dark_grey" />


    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btn_sign_up"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/button_margin_end"
        android:background="@drawable/rounded_button_background"
        android:text="@string/exit"
        android:textColor="@color/dark_grey" />

</RelativeLayout>
